# fastapi-load-test

./: .gitignore  Makefile  README.md  compose.yaml  pyproject.toml
app/: main.py  observability.py
client/: config.yaml  load_test.py
dashboard/: fastapi.json
docker/: Dockerfile  requirements.txt
